style,fix: card body height causing overflow

--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ div.sr-answer-input {
 }
 
 div.sr-card-body {
-    height: 85%;
+    height: 80%;
 }
 
 h4 > div.tree-item-flair-outer {
